--- a/force-app/main/default/classes/JiraAPIService.cls
+++ b/force-app/main/default/classes/JiraAPIService.cls
@@ -10,9 +10,25 @@ public with sharing class JiraAPIService {
 	 * TODO: Implement this method to make a callout to Jira API to create a project
 	 * Reminder: Extract and return the project ID from the response
 	 */
+	private static final String API_NAMED_CREDENTIALS = 'callout:JiraAPI';
 	public static String createProject(JiraWrapper.ProjectWrapper projectWrapper) {
 		// Your implementation goes here
-		return null;
+		Http http = new Http();
+		HttpRequest req = new HttpRequest();
+		String endpointEnding = '/project';
+		req.setEndpoint(API_NAMED_CREDENTIALS + endpointEnding);
+		req.setMethod('POST');
+		req.setBody(JSON.serialize(projectWrapper));
+
+		HttpResponse res = http.send(req);
+		String projectId;
+		String stringResp = res.getBody();
+		JiraWrapper jiraResponse;
+		if (res.getStatusCode() >= 200 && res.getStatusCode() <= 299) {
+			jiraResponse = (JiraWrapper)JSON.deserialize(stringResp, JiraWrapper.class);
+			projectId = jiraResponse.id;
+		}
+		return projectId;
 	}
 
 	/**
@@ -25,6 +41,21 @@ public with sharing class JiraAPIService {
 	 */
 	public static String createIssue(JiraWrapper.IssueWrapper issueWrapper) {
 		// Your implementation goes here
-		return null;
+		Http http = new Http();
+		HttpRequest req = new HttpRequest();
+		String endpointEnding = '/issue';
+		req.setEndpoint(API_NAMED_CREDENTIALS + endpointEnding);
+		req.setMethod('POST');
+		req.setBody(JSON.serialize(issueWrapper.generateIssuePayloadMap()));
+
+		HttpResponse res = http.send(req);
+		String issueKey;
+		String stringResp = res.getBody();
+		JiraWrapper jiraResponse;
+		if (res.getStatusCode() >= 200 && res.getStatusCode() <= 299) {
+			jiraResponse = (JiraWrapper)JSON.deserialize(stringResp, JiraWrapper.class);
+			issueKey = jiraResponse.key;
+		}
+		return issueKey;
 	}
 }
